Commiting files that were modified in old repo after 1.5.0 freeze.
Commiting so many changes at once won't normally happen, it's just a result of the initial migration to Git.

--- a/CHANGES
+++ b/CHANGES
@@ -13,7 +13,7 @@ Glow Changelog
 * glow.widgets.Overlay - aliasing "roll" transition to "slide" for compatibility with glow.anim shortcuts
 * glow.events - Deprecated addKeyListener, will return 'new and improved' in Glow 2.0
 * glow.widgets.Mask - Deprecated disableScroll
-* glow.embed - Updated "no flash" message to include links to webwise
+* glow.embed - Updated "no flash" message to include links to webwise.
 * glow.widgets.Overlay - Fixed bug creating inconsistency with Flash hiding when using multiple overlays
 * glow.widgets.Overlay - Now stops Flash within an Overlay playing on hide
 * glow.embed - Fixed bug where IE needs Flash movies to have an ID
