Added new bugfixes to changelog.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 Glow Changelog
 
+NEW BUGFIXES
+* glow.widgets.Carousel - Fixed bug that caused Next and Previous text to be visible in Opera when images were on
+* glow.widgets.AutoSuggest - Fixed bug that caused position of suggestion list to be wrong when text was zoomed in recent webkit browsers
+
 1.6.0-rc1
 
 * glow.widgets.Timetable - Fixing bug that may result in item sizes less than 0
