--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@ Glow Changelog
 
 1.6.0-rc2
 
+* glow.widgets.AutoSuggest - Added autoPosition option to allow user to manually place the suggestion list
 * glow.widgets.AutoSuggest - Improved interface when using keys to navigate suggestions, esc now restores the original value
 * glow.widgets.AutoSuggest - Added new 'filter' option to allow user to modify results before they are displayed
 * glow.widgets.Carousel - Fixed bug that caused Next and Previous text to be visible in Opera when images were on
