CHANGES: spelling corrections

--- a/CHANGES
+++ b/CHANGES
@@ -5,11 +5,11 @@ Glow Changelog
 * glow.widgets.Sortable - Fixed negative margin issue
 * glow.widgets.Carousel - Fixed edge case where original element was floated
 * glow.widgets.Carousel - Fixed issue with visibleIndexes misreporting
-* glow.widgets.Editor - Fixed issue with 'commit' even firing too often
+* glow.widgets.Editor - Fixed issue with 'commit' event firing too often
 * glow.widgets.Carousel, glow.widgets.Editor, glow.widgets.Timetable - Documentation updates
-* glow.dom.NodeList#offset - Fixed for browser that don't support getBoundingClientRect
+* glow.dom.NodeList#offset - Fixed for browsers that don't support getBoundingClientRect
 * glow.dom.NodeList#css - Fix to real-to-absolute unit convertor for IE
-* glow.forms.Form - Better error reporting when form as an element with name='submit'
+* glow.forms.Form - Better error reporting when form has an element with name='submit'
 
 1.6.0
 
